--- a/VanillaJS/plugins_js/css/modal.css
+++ b/VanillaJS/plugins_js/css/modal.css
@@ -1,3 +1,18 @@
+.wmodal {}
+
+.wmodal.open .modal-overlay,
+.wmodal.open .modal-window {
+    opacity: 1;
+    z-index: 1000;
+}
+
+
+.modal-window,
+.modal-overlay {
+    opacity: 0;
+    z-index: -1;
+}
+
 .modal-overlay {
     position: fixed;
     top: 0;
