--- a/VanillaJS/plugins_js/css/modal.css
+++ b/VanillaJS/plugins_js/css/modal.css
@@ -6,6 +6,30 @@
     z-index: 1000;
 }
 
+.wmodal.open .modal-window {
+    transform: translateY(100px);
+}
+
+.wmodal.open .modal-overlay {
+    background: rgba(0, 0, 0, .5);
+
+}
+
+.wmodal.hide .modal-overlay,
+.wmodal.hide .modal-window {
+    opacity: 1;
+    z-index: 1000;
+}
+
+.wmodal.hide .modal-window {
+    transform: translateY(-200px);
+}
+
+.wmodal.hide .modal-overlay {
+    background: rgba(0, 0, 0, 0);
+
+}
+
 
 .modal-window,
 .modal-overlay {
@@ -19,14 +43,18 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, 0);
+    transition: background .4s ease-in;
 }
 
 .modal-window {
     width: 600px;
     border-radius: 5px;
     background: white;
-    margin: 100px auto;
+    margin: 0 auto;
+    /* будем добавлять отступы через transform */
+    transform: translateY(-200px);
+    transition: transform .2s ease-in;
     /* temp */
     /* height: 200px; */
 }
